cleanes up submissions notebook also adds cross-validation workflow

--- a/notebooks/for_kaaaggleee.ipynb
+++ b/notebooks/for_kaaaggleee.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dress-crossing",
+   "id": "plain-register",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "smart-family",
+   "id": "reverse-pierre",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "biblical-swimming",
+   "id": "three-madness",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compact-irish",
+   "id": "surgical-decade",
    "metadata": {},
    "source": [
     "# Data Preparation\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "offensive-count",
+   "id": "located-carrier",
    "metadata": {},
    "outputs": [
     {
@@ -393,8 +393,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "thorough-kinase",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId\n",
+       "1       True\n",
+       "2      False\n",
+       "3       True\n",
+       "4      False\n",
+       "5       True\n",
+       "       ...  \n",
+       "887     True\n",
+       "888    False\n",
+       "889     True\n",
+       "890    False\n",
+       "891     True\n",
+       "Name: Cabin, Length: 891, dtype: bool"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cabins = df['Cabin']\n",
+    "cabins.str[0]\n",
+    "\n",
+    "df['Cabin']loc.isna()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "corresponding-driver",
+   "id": "laughing-discretion",
    "metadata": {},
    "source": [
     "Because there are a lot of different titles, I want to reduce them to five. This includes Mr, Miss, Mrs and Master, since there are already a lot observations. This means I have to match the other titles into the existing groups. I map them like this:\n",
@@ -406,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "surrounded-excerpt",
+   "id": "accurate-words",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "loved-bowling",
+   "id": "therapeutic-liechtenstein",
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "searching-gravity",
+   "id": "recognized-suspension",
    "metadata": {},
    "source": [
     "Now that I got information about the titles of each passenger I have all the features I want to train my model."
@@ -642,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "departmental-jerusalem",
+   "id": "incorporated-intent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "junior-cleanup",
+   "id": "afraid-entrepreneur",
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "pleased-maintenance",
+   "id": "apparent-dream",
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sustained-governor",
+   "id": "liable-stomach",
    "metadata": {},
    "source": [
     "Checking titles, since I am responsible for that.  \n",
@@ -723,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "allied-italian",
+   "id": "underlying-yemen",
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "female-philippines",
+   "id": "inappropriate-interview",
    "metadata": {},
    "source": [
     "## Splitting the dataset into train and test"
@@ -779,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "equivalent-integer",
+   "id": "sweet-athens",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comfortable-hamilton",
+   "id": "dedicated-copying",
    "metadata": {},
    "source": [
     "# Feature Engineering\n",
@@ -800,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "exterior-technology",
+   "id": "sacred-depression",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "forward-whole",
+   "id": "veterinary-psychology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "conscious-district",
+   "id": "thick-christian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aboriginal-needle",
+   "id": "honest-chair",
    "metadata": {},
    "source": [
     "# Train the model:"
@@ -855,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "functioning-profit",
+   "id": "collective-interface",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "metropolitan-american",
+   "id": "hollywood-cleaning",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unique-discovery",
+   "id": "roman-norwegian",
    "metadata": {},
    "source": [
     "# Evaluation"
@@ -906,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "accredited-prime",
+   "id": "historical-cincinnati",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "minimal-involvement",
+   "id": "further-frame",
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "combined-shelf",
+   "id": "divided-vacuum",
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +999,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "weekly-comment",
+   "id": "blank-anderson",
    "metadata": {},
    "source": [
     "1. feature engineering on train data\n",
@@ -979,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "paperback-doubt",
+   "id": "female-collins",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "configured-census",
+   "id": "freelance-guatemala",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "multiple-samoa",
+   "id": "traditional-invalid",
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "suited-hopkins",
+   "id": "alone-inspection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "great-volume",
+   "id": "thrown-shannon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "annoying-architecture",
+   "id": "former-hartford",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1144,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "collected-exemption",
+   "id": "potential-animation",
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "european-myrtle",
+   "id": "tamil-athens",
    "metadata": {},
    "outputs": [],
    "source": []
