adds some hyparam tuning

--- a/notebooks/kaggle_submission.ipynb
+++ b/notebooks/kaggle_submission.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "operating-homeless",
+   "execution_count": 213,
+   "id": "plain-transition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,13 @@
     "from sklearn.preprocessing import KBinsDiscretizer\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import cross_validate\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import FunctionTransformer"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "conscious-field",
+   "id": "proud-circulation",
    "metadata": {},
    "source": [
     "# Importing and preprocessing of the data sets\n",
@@ -38,8 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "negative-sense",
+   "execution_count": 214,
+   "id": "occupied-tiger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brilliant-breathing",
+   "id": "divided-dining",
    "metadata": {},
    "source": [
     "## Cleaning training data"
@@ -57,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "under-safety",
+   "execution_count": 215,
+   "id": "lyric-easter",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +86,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "competent-edgar",
+   "id": "acceptable-accent",
    "metadata": {},
    "source": [
     "Because there are a lot of different titles, I want to reduce them to five. This includes Mr, Miss, Mrs and Master, since there are already a lot observations. This means I have to match the other titles into the existing groups. I map them like this:\n",
@@ -108,8 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "mathematical-spain",
+   "execution_count": 216,
+   "id": "unique-miracle",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +124,7 @@
        "Name: title, dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "disturbed-pollution",
+   "execution_count": 217,
+   "id": "comparative-ghost",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +326,7 @@
        "5                      0  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,8 +338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "contrary-louisville",
+   "execution_count": 218,
+   "id": "generous-earth",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +479,7 @@
        "max      10.000000  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "previous-building",
+   "id": "annual-burlington",
    "metadata": {},
    "source": [
     "## Cleaning of test data"
@@ -497,8 +498,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "integral-thermal",
+   "execution_count": 219,
+   "id": "precious-worth",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +518,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,8 +530,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "simplified-repair",
+   "execution_count": 220,
+   "id": "sufficient-flash",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +545,7 @@
        "Name: title, dtype: int64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,8 +573,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "informed-greek",
+   "execution_count": 221,
+   "id": "otherwise-wagon",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +733,7 @@
        "896                    2  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,8 +745,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "absent-inquiry",
+   "execution_count": 222,
+   "id": "proud-outside",
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +867,7 @@
        "max      3.000000   76.000000    8.000000    9.000000  512.329200    10.000000"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boolean-yukon",
+   "id": "iraqi-highland",
    "metadata": {},
    "source": [
     "## Checking for Missing Values in both the train and test dataset"
@@ -885,8 +886,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "comic-tuesday",
+   "execution_count": 223,
+   "id": "entitled-creator",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thirty-company",
+   "id": "about-encoding",
    "metadata": {},
    "source": [
     "This gives me information about which columns I need to impute. Since I plan on using `Age`, `Fare` and `Embarked`, which all have missing values, I can now decide on a strategy of how to impute those columns."
@@ -943,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regulation-cameroon",
+   "id": "sufficient-darkness",
    "metadata": {},
    "source": [
     "# Feature Engineering\n",
@@ -952,8 +953,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "stretch-rover",
+   "execution_count": 224,
+   "id": "baking-plasma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tired-sociology",
+   "id": "after-assault",
    "metadata": {},
    "source": [
     "### Creating Pipelines"
@@ -972,14 +973,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "thrown-specific",
+   "execution_count": 225,
+   "id": "incredible-confidence",
    "metadata": {},
    "outputs": [],
    "source": [
     "impute_and_bin_age = make_pipeline(\n",
-    "    SimpleImputer(strategy = 'mean'),\n",
-    "    KBinsDiscretizer(n_bins = 5, encode = 'onehot-dense', strategy = 'quantile')\n",
+    "    SimpleImputer(strategy = 'mean'),  # using the median here decreases test score.\n",
+    "    KBinsDiscretizer(n_bins = 4, encode = 'onehot-dense', strategy = 'kmeans')\n",
     ")   # TODO: set impute strategy to median because of outliers seen in plotting (not yet inlcuded in this notebook)\n",
     "    # Also play around with bin strategy\n",
     "\n",
@@ -998,8 +999,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "premium-greenhouse",
+   "execution_count": 273,
+   "id": "interim-rapid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,8 +1018,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "progressive-canada",
+   "execution_count": 274,
+   "id": "spare-magnitude",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1030,9 @@
        "                                 Pipeline(steps=[('simpleimputer',\n",
        "                                                  SimpleImputer()),\n",
        "                                                 ('kbinsdiscretizer',\n",
-       "                                                  KBinsDiscretizer(encode='onehot-dense'))]),\n",
+       "                                                  KBinsDiscretizer(encode='onehot-dense',\n",
+       "                                                                   n_bins=4,\n",
+       "                                                                   strategy='kmeans'))]),\n",
        "                                 ['Age']),\n",
        "                                ('familiy_scale', MinMaxScaler(),\n",
        "                                 ['family_size']),\n",
@@ -1051,7 +1054,7 @@
        "                                 ['Embarked'])])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,10 +1065,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "honey-reverse",
+   "execution_count": 275,
+   "id": "impressive-chester",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/compose/_column_transformer.py:437: FutureWarning: Given feature/column names or counts do not match the ones for the data given during fit. This will fail from v0.24.\n",
+      "  warnings.warn(\"Given feature/column names or counts do not match \"\n"
+     ]
+    }
+   ],
    "source": [
     "X_train_trans = feat_eng.transform(X_train)\n",
     "X_test_trans = feat_eng.transform(X_test)"
@@ -1073,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "processed-mechanism",
+   "id": "conservative-declaration",
    "metadata": {},
    "source": [
     "## Cross Validation"
@@ -1081,8 +1093,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "electronic-martial",
+   "execution_count": 276,
+   "id": "written-navigator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,8 +1104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "defensive-sudan",
+   "execution_count": 277,
+   "id": "legitimate-premium",
    "metadata": {},
    "outputs": [
     {
@@ -1102,73 +1114,73 @@
      "text": [
       "\n",
       "Max depth of  1\n",
-      "fit_time       0.056963\n",
-      "score_time     0.008170\n",
-      "test_score     0.786737\n",
-      "train_score    0.786755\n",
+      "fit_time       0.056047\n",
+      "score_time     0.007309\n",
+      "test_score     0.786729\n",
+      "train_score    0.786756\n",
       "dtype: float64\n",
       "\n",
       "Max depth of  2\n",
-      "fit_time       0.052785\n",
-      "score_time     0.008360\n",
-      "test_score     0.786737\n",
-      "train_score    0.787317\n",
+      "fit_time       0.053562\n",
+      "score_time     0.007581\n",
+      "test_score     0.786729\n",
+      "train_score    0.787255\n",
       "dtype: float64\n",
       "\n",
       "Max depth of  3\n",
-      "fit_time       0.055295\n",
-      "score_time     0.008871\n",
-      "test_score     0.802448\n",
-      "train_score    0.815656\n",
+      "fit_time       0.053908\n",
+      "score_time     0.007668\n",
+      "test_score     0.811436\n",
+      "train_score    0.816933\n",
       "dtype: float64\n",
       "\n",
       "Max depth of  4\n",
-      "fit_time       0.055954\n",
-      "score_time     0.009056\n",
-      "test_score     0.828253\n",
-      "train_score    0.835578\n",
+      "fit_time       0.058694\n",
+      "score_time     0.008234\n",
+      "test_score     0.829413\n",
+      "train_score    0.834768\n",
       "dtype: float64\n",
       "\n",
       "Max depth of  5\n",
-      "fit_time       0.057839\n",
-      "score_time     0.009347\n",
-      "test_score     0.832747\n",
-      "train_score    0.845962\n",
+      "fit_time       0.060314\n",
+      "score_time     0.008373\n",
+      "test_score     0.837266\n",
+      "train_score    0.843497\n",
       "dtype: float64\n",
       "\n",
       "Max depth of  6\n",
-      "fit_time       0.060384\n",
-      "score_time     0.009928\n",
-      "test_score     0.831662\n",
-      "train_score    0.856064\n",
+      "fit_time       0.056023\n",
+      "score_time     0.007981\n",
+      "test_score     0.838390\n",
+      "train_score    0.849108\n",
       "dtype: float64\n",
       "\n",
       "Max depth of  7\n",
-      "fit_time       0.064096\n",
-      "score_time     0.009613\n",
-      "test_score     0.824951\n",
-      "train_score    0.867286\n",
+      "fit_time       0.056262\n",
+      "score_time     0.008162\n",
+      "test_score     0.822697\n",
+      "train_score    0.855220\n",
       "dtype: float64\n",
       "\n",
       "Max depth of  8\n",
-      "fit_time       0.061676\n",
-      "score_time     0.009622\n",
-      "test_score     0.821581\n",
-      "train_score    0.875141\n",
+      "fit_time       0.056900\n",
+      "score_time     0.008391\n",
+      "test_score     0.813720\n",
+      "train_score    0.861580\n",
       "dtype: float64\n",
       "\n",
       "Max depth of  9\n",
-      "fit_time       0.058610\n",
-      "score_time     0.009334\n",
-      "test_score     0.810395\n",
-      "train_score    0.879351\n",
+      "fit_time       0.058896\n",
+      "score_time     0.008178\n",
+      "test_score     0.817091\n",
+      "train_score    0.865445\n",
       "dtype: float64\n",
       "\n",
       "Max depth of  10\n",
-      "fit_time       0.058506\n",
-      "score_time     0.009607\n",
-      "test_score     0.809252\n",
-      "train_score    0.882437\n",
+      "fit_time       0.059240\n",
+      "score_time     0.008221\n",
+      "test_score     0.807029\n",
+      "train_score    0.866069\n",
       "dtype: float64\n"
      ]
     }
@@ -1179,13 +1191,13 @@
     ")\n",
     "\n",
     "for x in range(1,11):\n",
-    "    validation_model = RandomForestClassifier(n_estimators=100, max_depth=x, n_jobs=-1) # seems to perform best on 5 and 6\n",
-    "#     validation_model = LogisticRegression(max_iter=x * 1000)  # no difference in accuracy\n",
+    "#     validation_model = RandomForestClassifier(n_estimators=100, max_depth=x, n_jobs=-1) # seems to perform best on 5 and 6\n",
+    "    validation_model = LogisticRegression(max_iter=x * 1000)  # no difference in accuracy\n",
     "    score = cross_validate(\n",
     "        estimator=validation_model,    # the model you want to evaluate \n",
     "        X=X_train_trans,               # the training input data \n",
     "        y=y_train,                     # the training output data  \n",
-    "        cv=5,                          # number of cross validation datasets \n",
+    "        cv=10,                          # number of cross validation datasets \n",
     "        scoring='accuracy',            # evaluation metric \n",
     "        return_train_score=True,       # return both the score on the training and the cross validated data\n",
     "        n_jobs=1                       # n_jobs = -1 for using all your processores\n",
@@ -1196,7 +1208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "developmental-vatican",
+   "id": "grateful-activity",
    "metadata": {},
    "source": [
     "## Summary:\n",
@@ -1204,17 +1216,19 @@
     "    * There is no difference in modifying the max_iter value\n",
     "    * accuracy stays at `0.8305`\n",
     "2. Random Forest Classifier\n",
-    "    * has best accuracy with a depth of 5 and 6, which is around `0.8327`"
+    "    * has best accuracy with a depth of 5 and 6, which is around `0.8327`\n",
+    "    * Age Imputation (Mean), Binning strategy (kmeans) increases score to `0.8396`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "accurate-horizontal",
+   "execution_count": 281,
+   "id": "japanese-international",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = RandomForestClassifier(n_estimators=100, max_depth=5, n_jobs=-1)\n",
+    "# model = RandomForestClassifier(n_estimators=100, max_depth=5, n_jobs=-1)\n",
+    "model = LogisticRegression()\n",
     "\n",
     "model.fit(X_train_trans, y_train)\n",
     "y_pred = model.predict(X_test_trans)"
@@ -1222,15 +1236,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "fifteen-gathering",
+   "execution_count": 282,
+   "id": "explicit-conference",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-48-a801aff60d0f>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-282-a801aff60d0f>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1245,8 +1259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "dietary-checkout",
+   "execution_count": 283,
+   "id": "focal-cancer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "descending-demonstration",
+   "id": "immune-norway",
    "metadata": {},
    "outputs": [],
    "source": []
